[tool.poetry]
name = "perfi-backend"
version = "0.1.0"
description = "Backend for PerFi app"
authors = ["Facu Palavecino <palav.facundo@gmail.com>"]
readme = "README.md"
packages = [{include = "perfi_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
pylint = "^2.16.3"
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pre-commit = "^3.1.1"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
